--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                 </ul>
             </div>
         </div>
-    </header>>
+    </header>
 
      <!--Gallery section-->
     <main>
