--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -18,24 +25,22 @@
             <nav class="header-nav">
                 <a href="./index.html" class="header-logo"><span>Web</span>Studio </a>
                     <ul class="header-list">
-                        <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
+                        <li class="header-item"><a class="header-link current" href="./index.html">Студия</a></li>
                         <li class="header-item"><a class="header-link" href="./portfolio.html">Портфолио</a></li>
                         <li class="header-item"><a class="header-link" href="#">Контакты</a></li>
                     </ul>
             </nav>
-            <div class="header-connect">
                 <ul class="header-list">
                     <li class="header-item"><a class="header-mail" href="mailto:info@example.com">info@devstudio.com</a></li>
                     <li class="header-item"><a class="header-tel" href="tel:+380991111111">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
 
     <!--Main section -->
     <main>
         <!--Hero section-->
-        <section class="hero section">
+        <section class="hero">
             <div class="container hero-container">
                 <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса</h1>
                 <button type="button" class="hero-btn">Заказать услугу</button>
@@ -45,8 +50,8 @@
 
     <!--Section What are you doing-->
     <section class="section">
-        <h2 class="visually-hidden">Внимание к деталям</h2>
-       <div class="container details-container">
+       <div class="container">
+           <h2 class="visually-hidden">Внимание к деталям</h2>
             <ul class="details-list">
                 <li class="details-item">
                     <h3 class="details-title">Внимание к деталям</h3>
@@ -75,7 +80,7 @@
             </ul>
        </div>
         </section>
-        <section class="section">
+        <section class="section doing-section">
             <div class="container">
                 <h2 class="doing-title" >Чем мы занимаемся</h2>
                 <ul class="doing-list">
@@ -97,24 +102,32 @@
             <h2 class="team-first-title">Наша команда</h2>
                 <ul class="team-list">
                     <li class="team-item">
-                        <img src="images/igor-min.jpg" alt="igor" width="200"  >
-                        <h3 class="team-second-title">Игорь Демьяненко</h3>
-                        <p class="team-text">Product Designer</p>
+                        <img src="images/igor-min.jpg" alt="igor" width="270"  >
+                        <div class="team-text-container">
+                            <h3 class="team-second-title">Игорь Демьяненко</h3>
+                            <p class="team-text">Product Designer</p>
+                        </div>
                     </li>
                     <li class="team-item">
-                        <img src="images/olga-min.jpg" alt="olga" width="200">
-                        <h3 class="team-second-title">Ольга Репина</h3>
-                        <p class="team-text">Frontend Developer</p>
+                        <img src="images/olga-min.jpg" alt="olga" width="270">
+                        <div class="team-text-container">
+                            <h3 class="team-second-title">Ольга Репина</h3>
+                            <p class="team-text">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="team-item">
-                        <img src="images/nikolay-min.jpg" alt="nikolay" width="200">
-                        <h3 class="team-second-title">Николай Тарасов</h3>
-                        <p class="team-text">Marketing</p>
+                        <img src="images/nikolay-min.jpg" alt="nikolay" width="270">
+                        <div class="team-text-container">
+                            <h3 class="team-second-title">Николай Тарасов</h3>
+                            <p class="team-text">Marketing</p>
+                        </div>
                     </li>
                     <li class="team-item">
-                        <img src="images/misha-min.jpg" alt="misha" width="200">
-                        <h3 class="team-second-title">Михаил Ермаков</h3>
-                        <p class="team-text">UI Designer</p>
+                        <img src="images/misha-min.jpg" alt="misha" width="270">
+                        <div class="team-text-container">
+                            <h3 class="team-second-title">Михаил Ермаков</h3>
+                            <p class="team-text">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
         </div>
@@ -123,7 +136,7 @@
 
     <!--Footer section-->
 <footer class="footer">
-    <div class="container footer-container">
+    <div class="container">
         <a href="./index.html" class="footer-logo"><span>Web</span>Studio </a>
         <address class="footer-adress">
             <ul class="footer-list">
