--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,13 @@
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+            integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
@@ -19,95 +26,111 @@
                 <a href="./index.html" class="header-logo"><span>Web</span>Studio </a>
                     <ul class="header-list">
                         <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
-                        <li class="header-item"><a class="header-link" href="./portfolio.html">Портфолио</a></li>
+                        <li class="header-item"><a class="header-link current" href="./portfolio.html">Портфолио</a></li>
                         <li class="header-item"><a class="header-link" href="#">Контакты</a></li>
                     </ul>
             </nav>
-            <div class="header-connect">
                 <ul class="header-list">
                     <li class="header-item"><a class="header-mail" href="mailto:info@example.com">info@devstudio.com</a></li>
                     <li class="header-item"><a class="header-tel" href="tel:+380991111111">+38 096 111 11 11</a></li>
                 </ul>
-            </div>
         </div>
     </header>
 
      <!--Gallery section-->
     <main>
         <section class="section">
-            <h1 class="visually-hidden">Gallery</h1>
                <div class="container">
-                <ul class="gallery-btn-list">
-                    <li class="gallery-btn-item">
-                        <button type="button" class="gallery-btn">Все</button>
-                    </li>
-                    <li class="gallery-btn-item">
-                        <button type="button" class="gallery-btn">Веб-сайты</button>
-                    </li>
-                    <li class="gallery-btn-item">
-                        <button type="button" class="gallery-btn">Приложения</button>
-                    </li>
-                    <li class="gallery-btn-item">
-                        <button type="button" class="gallery-btn">Дизайн</button>
-                    </li>
-                    <li class="gallery-btn-item">
-                        <button type="button" class="gallery-btn">Маркетинг</button>
-                    </li>
-                </ul>
-                <ul class="gallery-list">
-                    <li  class="gallery-item">
-                        <img src="./images/tehno-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Технокряк</h2>
-                        <p class="gallery-text">Веб-сайт</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/poster-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
-                        <p class="gallery-text">Дизайн</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/seafood-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Ресторан Seafood</h2>
-                        <p class="gallery-text">Приложение</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/proect_prime-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Проект Prime</h2>
-                        <p class="gallery-text">Маркетинг</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/proect_boxes-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Проект Boxes</h2>
-                        <p class="gallery-text">Приложение</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/display-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Inspiration has no Borders</h2>
-                        <p class="gallery-text">Веб-сайт</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/newspaper-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Издание Limited Edition</h2>
-                        <p class="gallery-text">Дизайн</p>
-                    </li>
-                    <li class="gallery-item">
-                        <img src="./images/lab-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Проект LAB</h2>
-                        <p class="gallery-text">Маркетинг</p>
-                    </li>
-                    <li  class="gallery-item">
-                        <img src="./images/notebook-min.jpg" alt="" width="370">
-                        <h2 class="gallery-title">Growing Business</h2>
-                        <p class="gallery-text">Приложение</p>
-                    </li>
-                </ul>
+                <h1 class="visually-hidden">Gallery</h1>
+                    <ul class="gallery-btn-list">
+                        <li class="gallery-btn-item">
+                            <button type="button" class="gallery-btn">Все</button>
+                        </li>
+                        <li class="gallery-btn-item">
+                            <button type="button" class="gallery-btn">Веб-сайты</button>
+                        </li>
+                        <li class="gallery-btn-item">
+                            <button type="button" class="gallery-btn">Приложения</button>
+                        </li>
+                        <li class="gallery-btn-item">
+                            <button type="button" class="gallery-btn">Дизайн</button>
+                        </li>
+                        <li class="gallery-btn-item">
+                            <button type="button" class="gallery-btn">Маркетинг</button>
+                        </li>
+                    </ul>
+                    <ul class="gallery-list">
+                        <li  class="gallery-item">
+                            <img src="./images/tehno-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Технокряк</h2>
+                                <p class="gallery-text">Веб-сайт</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/poster-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Постер New Orlean vs Golden Star</h2>
+                                <p class="gallery-text">Дизайн</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/seafood-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Ресторан Seafood</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/proect_prime-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Проект Prime</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/proect_boxes-min.jpg" alt="" width="370">
+                            <div>
+                                <h2 class="gallery-title">Проект Boxes</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/display-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Inspiration has no Borders</h2>
+                                <p class="gallery-text">Веб-сайт</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/newspaper-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Издание Limited Edition</h2>
+                                <p class="gallery-text">Дизайн</p>
+                            </div>
+                        </li>
+                        <li class="gallery-item">
+                            <img src="./images/lab-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Проект LAB</h2>
+                                <p class="gallery-text">Маркетинг</p>
+                            </div>
+                        </li>
+                        <li  class="gallery-item">
+                            <img src="./images/notebook-min.jpg" alt="" width="370">
+                            <div class="gallery-text-container">
+                                <h2 class="gallery-title">Growing Business</h2>
+                                <p class="gallery-text">Приложение</p>
+                            </div>
+                        </li>
+                    </ul>
                </div>
        </section>
     </main>
     
-   <!--Footer section-->
+     <!--Footer section-->
 <footer class="footer">
-    <div class="container footer-container">
+    <div class="container">
         <a href="./index.html" class="footer-logo"><span>Web</span>Studio </a>
         <address class="footer-adress">
             <ul class="footer-list">
@@ -124,8 +147,5 @@
         </address>
     </div>
 </footer>
-
-
-
 </body>
 </html>
